[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_buda"
version = "0.1.1"
description = "Buda exchange plugin for bt_api - Latin American markets (CLP/COP/PEN)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.entry-points."bt_api.plugins"]
buda = "bt_api_buda.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "*.bak",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF100", "S", "PERF", "PIE790"]
ignore = ["E501", "B008", "N802", "N803", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
