[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_buda"
version = "0.1.1"
description = "Buda exchange plugin for bt_api - Latin American markets (CLP/COP/PEN)"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.entry-points."bt_api.plugins"]
buda = "bt_api_buda.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "*.bak",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF100", "S", "PERF", "PIE790"]
ignore = ["E501", "B008", "N802", "N803", "S101", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"examples/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"scripts/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "kline: Kline/bar data tests",
    "orderbook: Orderbook/depth data tests",
    "ticker: Public ticker data tests",
    "network: Tests requiring network access",
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]

